--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script defer src="app.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Guess that Jersey Number!</title>
 </head>
 <body>
-    
+    <div class="landingPage">
+        <h1 class="game-title">Guess that Jersey Number!</h1>
+        <div class="select-Difficulty">
+            <button id="easy-btn">Easy</button>
+            <button id="intermediate-btn">Intermediate</button>
+            <button id="hard-btn">Hard</button>
+        </div>
+    </div>
 </body>
 </html>
