Refactored landing page, added more html files.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
 <body>
     <div class="landingPage">
         <h1 class="game-title">Guess that Jersey Number!</h1>
-        <div class="select-Difficulty">
-            <button id="easy-btn">Easy</button>
-            <button id="intermediate-btn">Intermediate</button>
-            <button id="hard-btn">Hard</button>
-        </div>
+        <a href="/easy.html" class="btn">Easy</a>
+        <a href="/intermediate.html" class="btn">Intermediate</a>
+        <a href="/hard.html" class="btn">Hard</a>
+        <a href="https://github.com/kongjieni/Phase-1-Project" class="gh-btn">GitHub</a>
     </div>
 </body>
 </html>
