--- a/intermediate.html
+++ b/intermediate.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script defer src="app.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Guess that Jersey Number!</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="game">
+            <div class="hud">
+                <div class="progress-bar">
+                    
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
