Added some app.js

--- a/easy.html
+++ b/easy.html
@@ -11,7 +11,7 @@
     <title>Guess that Jersey Number!</title>
 </head>
 <body>
-    <div class="container">
+    <div id="easyContainer">
         
     </div>
 </body>
