--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="indexContainer">
         <h1 class="game-title">Guess that Jersey Number!</h1>
         <a href="/easy.html" class="easy-btn">Easy</a>
         <a href="/intermediate.html" class="inter-btn">Intermediate</a>
