--- a/intermediate.html
+++ b/intermediate.html
@@ -11,7 +11,7 @@
     <title>Guess that Jersey Number!</title>
 </head>
 <body>
-    <div class="container">
+    <div id="mediumContainer">
         <div class="game">
             <div class="hud">
                 <div class="progress-bar">
