Edited app.js, prototype working

--- a/easy.html
+++ b/easy.html
@@ -13,20 +13,19 @@
 </head>
 
 <body>
-    <div class="easyContainer">
+    <div class="container">
         <div id="question-container" class="hide"></div>
-            <div id="question">Question</div>
+            <div class="playerImage"></div>
+            <div id="question">LeBron James - LA Lakers</div>
             <div id="answer-buttons" class="button-grid"></div>
-                <button class="answer-btn">Answer 1</button>
-                <button class="answer-btn">Answer 2</button>
-                <button class="answer-btn">Answer 3</button>
-                <button class="answer-btn">Answer 4</button>
+                <button class="answer-btn1">8</button>
+                <button class="answer-btn2">24</button>
+                <button class="answer-btn3">23</button>
+                <button class="answer-btn4">11</button>
         <div id="controls">
-            <button id="start-btn">Start</button>
+            <!-- <button id="start-btn">Start</button> -->
             <button id="next-btn">Next</button>
         </div>
-    <div id="easyContainer">
     </div>
 </body>
-
 </html>
