--- a/epic.html
+++ b/epic.html
@@ -11,7 +11,7 @@
     <title>Guess that Jersey Number!</title>
 </head>
 <body>
-    <div id="epicContainer">
+    <div id="container">
         
     </div>
 </body>
