--- a/easy.html
+++ b/easy.html
@@ -16,12 +16,12 @@
     <div class="container">
         <div id="question-container" class="hide"></div>
             <div class="playerImage"></div>
-            <div id="question">LeBron James - LA Lakers</div>
+            <div id="question"></div>
             <div id="answer-buttons" class="button-grid"></div>
-                <button class="answer-btn1">8</button>
-                <button class="answer-btn2">24</button>
-                <button class="answer-btn3">23</button>
-                <button class="answer-btn4">11</button>
+                <button class="answer-btn1"></button>
+                <button class="answer-btn2"></button>
+                <button class="answer-btn3"></button>
+                <button class="answer-btn4"></button>
         <div id="controls">
             <!-- <button id="start-btn">Start</button> -->
             <button id="next-btn">Next</button>
