--- a/easy.html
+++ b/easy.html
@@ -15,13 +15,14 @@
 <body>
     <div class="container">
         <div id="question-container" class="hide"></div>
-            <div class="playerImage"></div>
+            <img class="playerImage" src="img_girl.jpg">
             <div id="question"></div>
-            <div id="answer-buttons" class="button-grid"></div>
+            <div id="answer-buttons" class="button-grid">
                 <button class="answer-btn1"></button>
                 <button class="answer-btn2"></button>
                 <button class="answer-btn3"></button>
                 <button class="answer-btn4"></button>
+            </div>
         <div id="controls">
             <!-- <button id="start-btn">Start</button> -->
             <button id="next-btn">Next</button>
