--- a/easy.html
+++ b/easy.html
@@ -15,7 +15,8 @@
 <body>
     <div class="container">
         <div id="question-container" class="hide"></div>
-            <img class="playerImage" src="img_girl.jpg">
+            <div class="scoreboard">Score: 0</div>
+            <img class="playerImage" src="">
             <div id="question"></div>
             <div id="answer-buttons" class="button-grid">
                 <button class="answer-btn1"></button>
