--- a/easy.html
+++ b/easy.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="app.js"></script>
+    <script defer src="easy.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/easy.css">
@@ -14,15 +14,18 @@
 
 <body>
     <div class="container">
-        <div id="question-container" class="hide"></div>
+        <div class="quizInfo">
             <div class="scoreboard">Score: 0</div>
+            <div class="questionNumber">1 of 10</div>
+        </div>
+        <div id="question-container" class="hide"></div>
             <img class="playerImage" src="">
             <div id="question"></div>
-            <div id="answer-buttons" class="button-grid">
-                <button class="answer-btn1"></button>
-                <button class="answer-btn2"></button>
-                <button class="answer-btn3"></button>
-                <button class="answer-btn4"></button>
+            <div id="answer-buttons">
+                <button class="answer-btn1" id="btn"></button>
+                <button class="answer-btn2" id="btn"></button>
+                <button class="answer-btn3" id="btn"></button>
+                <button class="answer-btn4" id="btn"></button>
             </div>
         <div id="controls">
             <!-- <button id="start-btn">Start</button> -->
