--- a/easy.html
+++ b/easy.html
@@ -27,6 +27,9 @@
                 <button class="answer-btn3" id="btn"></button>
                 <button class="answer-btn4" id="btn"></button>
             </div>
+            <div class="finalPage">
+                
+            </div>
         <div id="controls">
             <!-- <button id="start-btn">Start</button> -->
             <button id="next-btn">Next</button>
