--- a/easy.html
+++ b/easy.html
@@ -14,26 +14,27 @@
 
 <body>
     <div class="container">
+        <a class="homeButton" href="index.html">HOME</a>
         <div class="quizInfo">
             <div class="scoreboard">Score: 0</div>
             <div class="questionNumber">1 of 10</div>
         </div>
         <div id="question-container" class="hide"></div>
-            <img class="playerImage" src="">
-            <div id="question"></div>
-            <div id="answer-buttons">
-                <button class="answer-btn1" id="btn"></button>
-                <button class="answer-btn2" id="btn"></button>
-                <button class="answer-btn3" id="btn"></button>
-                <button class="answer-btn4" id="btn"></button>
-            </div>
-            <div class="finalPage">
-                
-            </div>
+        <img class="playerImage" src="">
+        <div class="finalPage"></div>
+        <div id="question"></div>
+        <div id="answer-buttons">
+            <button class="answer-btn1" id="btn"></button>
+            <button class="answer-btn2" id="btn"></button>
+            <button class="answer-btn3" id="btn"></button>
+            <button class="answer-btn4" id="btn"></button>
+        </div>
+
         <div id="controls">
             <!-- <button id="start-btn">Start</button> -->
             <button id="next-btn">Next</button>
         </div>
     </div>
 </body>
+
 </html>
