--- a/epic.html
+++ b/epic.html
@@ -14,6 +14,7 @@
 
 <body>
     <div class="container">
+        <a class="homeButton" href="index.html">HOME</a>
         <div class="quizInfo">
             <div class="scoreboard">Score: 0</div>
             <div class="questionNumber">1 of 10</div>
