Need to finish button on finalpage

--- a/epic.html
+++ b/epic.html
@@ -21,6 +21,7 @@
         </div>
         <div id="question-container" class="hide"></div>
             <img class="playerImage" src="">
+            <div class="finalPage"></div>
             <div id="question"></div>
             <div id="answer-buttons">
                 <button class="answer-btn1" id="btn"></button>
