--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="/easy.html" class="easy-btn">Easy</a>
         <a href="/intermediate.html" class="inter-btn">Intermediate</a>
         <a href="/epic.html" class="epic-btn">Epic</a>
-        <a href="https://github.com/kongjieni/Phase-1-Project" class="gh-btn">GitHub</a>
+        <a href="https://github.com/kongjieni/Phase-1-Project" class="gh-btn">Github</a>
     </div>
 </body>
 
